Add support for tracking network interfaces on routers and identities. Fixes #3082. Add network discover to router. Fixes #3083
