# controller/rest_model/router_detail.go
@@ -63,6 +63,9 @@ type RouterDetail struct {
 	// Required: true
 	Fingerprint *string `json:"fingerprint"`
 
+	// interfaces
+	Interfaces []*Interface `json:"interfaces"`
+
 	// listener addresses
 	ListenerAddresses []*RouterListener `json:"listenerAddresses"`
 
@@ -97,6 +100,8 @@ func (m *RouterDetail) UnmarshalJSON(raw []byte) error {
 
 		Fingerprint *string `json:"fingerprint"`
 
+		Interfaces []*Interface `json:"interfaces"`
+
 		ListenerAddresses []*RouterListener `json:"listenerAddresses"`
 
 		Name *string `json:"name"`
@@ -116,6 +121,8 @@ func (m *RouterDetail) UnmarshalJSON(raw []byte) error {
 	m.Disabled = dataAO1.Disabled
 
 	m.Fingerprint = dataAO1.Fingerprint
+
+	m.Interfaces = dataAO1.Interfaces
 
 	m.ListenerAddresses = dataAO1.ListenerAddresses
 
@@ -146,6 +153,8 @@ func (m RouterDetail) MarshalJSON() ([]byte, error) {
 
 		Fingerprint *string `json:"fingerprint"`
 
+		Interfaces []*Interface `json:"interfaces"`
+
 		ListenerAddresses []*RouterListener `json:"listenerAddresses"`
 
 		Name *string `json:"name"`
@@ -162,6 +171,8 @@ func (m RouterDetail) MarshalJSON() ([]byte, error) {
 	dataAO1.Disabled = m.Disabled
 
 	dataAO1.Fingerprint = m.Fingerprint
+
+	dataAO1.Interfaces = m.Interfaces
 
 	dataAO1.ListenerAddresses = m.ListenerAddresses
 
@@ -201,6 +212,10 @@ func (m *RouterDetail) Validate(formats strfmt.Registry) error {
 	}
 
 	if err := m.validateFingerprint(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateInterfaces(formats); err != nil {
 		res = append(res, err)
 	}
 
@@ -265,6 +280,33 @@ func (m *RouterDetail) validateFingerprint(formats strfmt.Registry) error {
 
 	if err := validate.Required("fingerprint", "body", m.Fingerprint); err != nil {
 		return err
+	}
+
+	return nil
+}
+
+func (m *RouterDetail) validateInterfaces(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.Interfaces) { // not required
+		return nil
+	}
+
+	for i := 0; i < len(m.Interfaces); i++ {
+		if swag.IsZero(m.Interfaces[i]) { // not required
+			continue
+		}
+
+		if m.Interfaces[i] != nil {
+			if err := m.Interfaces[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("interfaces" + "." + strconv.Itoa(i))
+				} else if ce, ok := err.(*errors.CompositeError); ok {
+					return ce.ValidateName("interfaces" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
 	}
 
 	return nil
@@ -344,6 +386,10 @@ func (m *RouterDetail) ContextValidate(ctx context.Context, formats strfmt.Regis
 		res = append(res, err)
 	}
 
+	if err := m.contextValidateInterfaces(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
 	if err := m.contextValidateListenerAddresses(ctx, formats); err != nil {
 		res = append(res, err)
 	}
@@ -355,6 +401,26 @@ func (m *RouterDetail) ContextValidate(ctx context.Context, formats strfmt.Regis
 	if len(res) > 0 {
 		return errors.CompositeValidationError(res...)
 	}
+	return nil
+}
+
+func (m *RouterDetail) contextValidateInterfaces(ctx context.Context, formats strfmt.Registry) error {
+
+	for i := 0; i < len(m.Interfaces); i++ {
+
+		if m.Interfaces[i] != nil {
+			if err := m.Interfaces[i].ContextValidate(ctx, formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("interfaces" + "." + strconv.Itoa(i))
+				} else if ce, ok := err.(*errors.CompositeError); ok {
+					return ce.ValidateName("interfaces" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
 	return nil
 }
 
